# sdk-sidewalk

./: .gitignore  Kconfig
doc/: build_local.sh
lib/lora_fsk/: CMakeLists.txt
lib/lora_fsk/lr11xx/include/: halo_lr11xx_radio.h  lr11xx_config.h
samples/: get_full_almanac.py
samples/common/: Kconfig.defconfig  bootloader_version.cmake
samples/gnss_lr1110/: CMakeLists.txt  build.sh  cli.conf  fsk_cli.conf  prj.conf  readme.md  sample.yaml
samples/gnss_lr1110/boards/: nrf52840dk_nrf52840.overlay  nrf5340dk_nrf5340_cpuapp.overlay
samples/gnss_lr1110/include/: application_thread.h  board_events.h  fragment.h
samples/gnss_lr1110/src/: almanac_update.c  application_thread.c  board_events.c  fragment.c  gnss.c  main.c  sidewalk_callbacks.c  wifi.c
samples/sensor_monitoring/: build.sh
samples/template_subghz/: fsk_cli.conf
samples/template_subghz/boards/: nrf52840dk_nrf52840.overlay
samples/template_subghz/src/: application_thread.c
samples/wifi_lr1110/: CMakeLists.txt  cli.conf  fsk.conf  fsk_cli.conf  pm_static.yml  prj.conf  readme.md  sample.yaml
samples/wifi_lr1110/boards/: nrf52840dk_nrf52840.overlay  nrf5340dk_nrf5340_cpuapp.overlay
samples/wifi_lr1110/include/: application_thread.h  board_events.h  fragment.h
samples/wifi_lr1110/src/: application_thread.c  board_events.c  fragment.c  main.c  sidewalk_callbacks.c  wifi.c
subsys/config/common/: CMakeLists.txt
subsys/config/common/include/: app_subGHz_config.h
subsys/config/common/src/: app_subGHz_config.c  app_subGHz_config_lr11xx.c
subsys/sal/common/sid_pal_ifc/: sid_pal_radio_ifc.h
subsys/sal/sid_pal/src/: pal_init.c
subsys/semtech/include/: sx126x_config.h
utils/include/: lr1110_shell.h  sid_shell.h  sidewalk_version.h
utils/src/: CMakeLists.txt  lr1110_shell.c  shell.c  sx126x_shell.c
